--- a/rs1.yaml
+++ b/rs1.yaml
@@ -1,23 +1,21 @@
---- 
 apiVersion: apps/v1
 kind: ReplicaSet
 metadata: 
-  name: mywebrs
+ name: myweb-rs
 spec: 
-  replicas: 3
-  selector:
-   matchExpressions:
-    - { key: env, operator: In, values: [ production ] }
-    - { key: region, operator: In, values: [ IN ] }
-  template: 
-    metadata: 
-      labels: 
-        dc: "2"
-        env: production
-        region: IN
-      name: myweb-pod
-    spec: 
-      containers: 
-        - 
-          image: httpd
-          name: myweb-con
+ replicas: 3
+ selector:
+  matchLabels:
+   env: production
+#  matchExpressions:
+#     - { key: env, operator: In, values: [ production ] }
+ template: 
+  metadata:
+   name: myweb-pod
+   labels: 
+    env: production
+  spec: 
+   containers: 
+   - name: myweb-con 
+     image: httpd
+        
